[package]
name = "rsapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
serde = "1.0.195"
serde_derive = "1.0.195"
tokio = { version = "1.35.1", features = ["rt-multi-thread"] }
tracing-subscriber = "0.3.18"
