[package]
name = "rsapp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
clap = { version = "4.4.18", features = ["derive"] }
config = { version = "0.13.4", features = ["json", "toml"] }
ffmpeg-next = "7.0.1"
log = "0.4.20"
reqwest = { version = "0.11.23" }
serde = "1.0.195"
serde_derive = "1.0.195"
sqlx = { version = "0.7.3", features = ["runtime-tokio", "postgres"] }
tokio = { version = "1.35.1", features = ["rt-multi-thread", "signal"] }
tracing-subscriber = "0.3.18"
